--- a/minimal-api/Test/Test.csproj
+++ b/minimal-api/Test/Test.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.4" />
+</ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
