--- a/minimal-api/minimal-api.csproj
+++ b/minimal-api/minimal-api.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Test\Test.csproj" />
+  </ItemGroup>
+
 </Project>
